// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountWizardReducers should handle all defined types: defined types 1`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "ADD_ACCOUNT",
}
`;

exports[`AccountWizardReducers should handle all defined types: defined types 2`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "DELETE_ACCOUNT",
}
`;

exports[`AccountWizardReducers should handle all defined types: defined types 3`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "DELETE_ACCOUNTS",
}
`;

exports[`AccountWizardReducers should handle all defined types: defined types 4`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "GET_ACCOUNT",
}
`;

exports[`AccountWizardReducers should handle all defined types: defined types 5`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "GET_ACCOUNTS",
}
`;

exports[`AccountWizardReducers should handle all defined types: defined types 6`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "UPDATE_ACCOUNTS",
}
`;

exports[`AccountWizardReducers should handle all defined types: defined types 7`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "UPDATE_ACCOUNT",
}
`;

exports[`AccountWizardReducers should handle all defined types: defined types 8`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "UPDATE_ACCOUNT_FIELD",
}
`;

exports[`AccountWizardReducers should handle all defined types: defined types 9`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "UPDATE_ACCOUNT_IMAGE",
}
`;

exports[`AccountWizardReducers should handle all defined types: defined types 10`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "UPDATE_ACCOUNT_IMAGE_FIELD",
}
`;

exports[`AccountWizardReducers should handle all defined types: defined types 11`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "UPDATE_ACCOUNT_IMAGES_INSTANCES",
}
`;

exports[`AccountWizardReducers should handle all defined types: defined types 12`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "GET_ACCOUNT_IMAGES",
}
`;

exports[`AccountWizardReducers should handle all defined types: defined types 13`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "GET_ACCOUNT_IMAGES_INSTANCES",
}
`;

exports[`AccountWizardReducers should handle all defined types: defined types 14`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "GET_ACCOUNT_INSTANCES",
}
`;

exports[`AccountWizardReducers should handle all defined types: defined types 15`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "ADD_ACCOUNT_WIZARD",
}
`;

exports[`AccountWizardReducers should handle all defined types: defined types 16`] = `
Object {
  "result": Object {
    "account": Object {
      "test": "success",
    },
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": true,
    "stepRoleValid": true,
  },
  "type": "ADD_ACCOUNT_WIZARD_STEP_POLICY",
}
`;

exports[`AccountWizardReducers should handle all defined types: defined types 17`] = `
Object {
  "result": Object {
    "account": Object {
      "test": "success",
    },
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "INVALID_ACCOUNT_WIZARD_STEP_POLICY",
}
`;

exports[`AccountWizardReducers should handle all defined types: defined types 18`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "ADD_ACCOUNT_WIZARD_STEP_ROLE",
}
`;

exports[`AccountWizardReducers should handle all defined types: defined types 19`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "INVALID_ACCOUNT_WIZARD_STEP_ROLE",
}
`;

exports[`AccountWizardReducers should handle all defined types: defined types 20`] = `
Object {
  "result": Object {
    "account": Object {
      "test": "success",
    },
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": true,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "ADD_ACCOUNT_WIZARD_STEP_ARN",
}
`;

exports[`AccountWizardReducers should handle all defined types: defined types 21`] = `
Object {
  "result": Object {
    "account": Object {
      "test": "success",
    },
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "INVALID_ACCOUNT_WIZARD_STEP_ARN",
}
`;

exports[`AccountWizardReducers should handle all defined types: defined types 22`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": true,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": true,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "ADD_ACCOUNT_SHOW",
}
`;

exports[`AccountWizardReducers should handle all defined types: defined types 23`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "UPDATE_ACCOUNT_HIDE",
}
`;

exports[`AccountWizardReducers should handle all defined types: defined types 24`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "DELETE_ACCOUNT_HIDE",
}
`;

exports[`AccountWizardReducers should handle all defined types: defined types 25`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "DELETE_ACCOUNT_SHOW",
}
`;

exports[`AccountWizardReducers should handle all defined types: defined types 26`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "EDIT_ACCOUNT_HIDE",
}
`;

exports[`AccountWizardReducers should handle all defined types: defined types 27`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {},
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "EDIT_ACCOUNT_SHOW",
}
`;

exports[`AccountWizardReducers should handle specific defined types: defined type GET_SYSTEM_CONFIG_FULFILLED 1`] = `
Object {
  "result": Object {
    "account": Object {},
    "add": false,
    "configuration": Object {
      "detail": "TEST",
    },
    "edit": false,
    "error": false,
    "errorMessage": null,
    "errorStatus": null,
    "fulfilled": false,
    "pending": false,
    "show": false,
    "stepArnErrorMessage": null,
    "stepArnValid": false,
    "stepPolicyErrorMessage": null,
    "stepPolicyValid": false,
    "stepRoleValid": true,
  },
  "type": "GET_SYSTEM_CONFIG_FULFILLED",
}
`;
